deploy/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web

spec:
  replicas: 2

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: web

          image: registry.uniproject.jp/official/presen-comeview-front:0.1.0

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 300m
              memory: 256Mi
