deploy/base/server-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: server

spec:
  selector:
    app: server

  ports:
    - port: 3001
      targetPort: 3001
