deploy/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: web-route

spec:
  parentRefs:
    - name: uniproject-jp-gateway
      namespace: infra-gateway
      sectionName: https-wildcard

  hostnames:
    - api-comeview.uniproject.jp

  rules:
    # WebSocket
    - matches:
        - path:
            type: PathPrefix
            value: /ws

      backendRefs:
        - name: server
          port: 3001

    # Room create API

    - matches:
        - path:
            type: PathPrefix
            value: /rooms

      backendRefs:
        - name: server
          port: 3001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: server-route

spec:
  parentRefs:
    - name: uniproject-jp-gateway
      namespace: infra-gateway
      sectionName: https-wildcard

  hostnames:
    - comeview.uniproject.jp

  rules:
    # React
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: web
          port: 80
